# Verinode

./: .env.example  AuditTrail.tsx  Billing.tsx  BulkOperations.tsx  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  ChangeLog.ts  ChangeLog.tsx  Enterprise.ts  FREIGHTER_INTEGRATION_README.md  GAS_OPTIMIZATION_ANALYSIS.md  GAS_OPTIMIZATION_SUMMARY.md  GIT_PUSH_COMMANDS.md  LICENSE  PROOF_API_IMPLEMENTATION.md  PROOF_API_PR_TEMPLATE.md  PROOF_VERIFIER_README.md  PR_CONTENT.md  PR_TEMPLATE.md  PR_VERINODE_AI_SEARCH.md  PULL_REQUEST_TEMPLATE.md  PUSH_INSTRUCTIONS.md  RoleManagement.tsx  RollbackButton.tsx  TeamAnalytics.tsx  TeamMember.ts  UserManagement.tsx  VersionComparison.tsx  VersionHistory.tsx  auditService.ts  billingService.ts  demo_gas_optimization.py  enterpriseController.ts  lib.rs  package.json  proofVersioning.rs  push_to_forked_repo.ps1  roleService.ts  (+4 more)
backend/: CommandInterface.tsx  DiscordBot.tsx  GitHubConnect.tsx  ProofVersion.ts  SlackBot.tsx  authService.ts  bot.ts  enterpriseController.ts  integrationController.ts  notificationService.ts  package.json  roleService.ts  tsconfig.json  versioningService.ts  webhookHandler.ts  webhookService.ts
contracts/: Cargo.toml  README.md  requirements.txt
contracts/ai/: gas_optimization.py  pattern_recognition.py
contracts/src/: Cargo.toml  lib.rs  proof_verifier.rs  proof_verifier_test.rs  test.rs
contracts/src/optimization/: AIOptimizer.rs
contracts/tools/: optimization_suggester.rs
docs/: API_DOCUMENTATION.md  GITHUB_AUTH.md
frontend/: package.json
scripts/: benchmark_optimizations.py  deploy.sh  deploy_proof_verifier.js  main.tf  package.json  performance-test.sh  production.dockerfile  security-scan.sh  variables.tf
src/: atomicSwap.rs  chainVerifier.rs  crossChainBridge.rs  crossChainBridge_test.rs  customTemplate.rs  deploy_grant_treasury.js  grantTreasury.rs  grantTreasury_test.rs  lib.rs  messagePassing.rs  multiSignature.rs  zkProofs.rs  (+1 more)
(+98 files in other folders)
